force-app/main/default/objects/Widget__c/Widget__c.object-meta.xml
<CustomObject>
    <label>Widget</label>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>