force-app/main/default/objects/Widget__c/fields/Is_checked__c.field-meta.xml
<CustomField>
    <fullName>Is_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>information about record is the value of this record checked</description>
    <label>Is checked</label>
    <type>Checkbox</type>
</CustomField>