force-app/main/default/objects/Widget__c/fields/Is_Properly_Nested__c.field-meta.xml
<CustomField>
    <fullName>Is_Properly_Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Given a string containing brackets `[]`, braces `{}`,
parentheses `()`, or any combination thereof, verify that
any and all pairs are matched and nested correctly.</inlineHelpText>
    <label>Is Properly Nested</label>
    <type>Checkbox</type>
</CustomField>